<resources>
    <string name="app_name">The Derby</string>
    <string name="app_title">THE DERBY</string>

    <string name="start_game_tip_off">TIP\nOFF</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="game_over">GAME OVER</string>
    <string name="save_score">SAVE SCORE</string>

    <string name="hall_of_fame_title">🏆 HALL OF FAME 🏆</string>
    <string name="hall_of_fame_btn">🏆 HALL OF FAME</string>
    <string name="settings_title">SETTINGS</string>
    <string name="game_mode_label">GAME MODE</string>
    <string name="difficulty_label">DIFFICULTY</string>
    <string name="score_label">Score: 0</string>
    <string name="score_placeholder">000</string>
    <string name="player_name_placeholder">Player Name</string>
    <string name="score_value_placeholder">100</string>

    <string name="enter_name_hint">Enter Your Name</string>

    <string name="mode_tilt">TILT</string>
    <string name="mode_arrow">ARROW</string>
    <string name="difficulty_easy">EASY</string>
    <string name="difficulty_hard">HARD</string>
</resources>