<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/court">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_res_screen"/>

    <TextView
        android:id="@+id/game_over_LBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="@dimen/main_LBL_size"
        android:textColor="@color/color_game_over_lbl"
        android:fontFamily="@font/russo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/width_image_layout"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/restart_game_BTN"
        android:layout_width="@dimen/size_result_btn_width"
        android:layout_height="@dimen/size_btn_high"
        android:text="@string/play_again"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_text_btn"
        android:textAllCaps="true"
        android:backgroundTint="@color/color_home_screen"
        android:fontFamily="@font/russo"
        android:layout_centerInParent="true"
        app:cornerRadius="@dimen/radius_button"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_BTN"
        android:layout_width="@dimen/size_result_btn_width"
        android:layout_height="@dimen/size_btn_high"
        android:text="@string/main_menu"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text"
        android:backgroundTint="@color/color_text_btn"
        android:fontFamily="@font/russo"
        android:layout_below="@id/restart_game_BTN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_btn_result_screen"
        app:cornerRadius="@dimen/radius_button" />


</RelativeLayout>